# ROS2-fundamentals

./: CMakeLists.txt  README.md  package.xml
ros2_fundamentals_examples/: __init__.py  my_minimal_publisher.py  my_minimal_subscriber.py
scripts/: minimal_pub_sub_launch.sh
src/: cpp_minimal_publisher.cpp  cpp_minimal_subscriber.cpp
